# lisp-interpreter

./: .gitignore  CMakeLists.txt  README.md  a.out  betterstring.h  err.c  foo.c  int.h  lambda.c  lisp.c  main.c  makefile  oddp.lisp  old.mk  parser.c
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  betterstring.c  data.c  err.c  eval.c  func.c  main.c  parser.c
test/: Makefile  data.txt  factorial.lisp  ffi.lisp  fibonacci.lisp  func.lisp  l.lisp  other.lisp  proj.lisp  repl.lisp  test.c  test.lisp
test/src/: Makefile  cmake_install.cmake
